--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 "just touched down in LA",
 "prefers the aisle",
 "nice place you have here, mr. pike",
+"here's the thing",
 "here comes your man",
 "has no problem with that",
 "has a double tooth",
