--- a/likes/index.html
+++ b/likes/index.html
@@ -67,6 +67,8 @@
 <a href="https://www.minibarbyjoseandres.com/" class="nounderline">Barmini</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Vietnamese_iced_coffee" class="nounderline">Vietnamese coffee</a><br><br>
 <a href="https://www.quantamagazine.org/" class="nounderline">Quanta magazine</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Category:Music_videos_directed_by_Spike_Jonze" class="nounderline">Spike Jonze music videos</a><br><br>
+
 <a href="https://en.wikipedia.org/wiki/Dreaming_(Blondie_song)" class="nounderline">Dreaming by Blondie</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon serrano</a><br><br>
 
@@ -167,7 +169,7 @@
 <a href="https://en.wikipedia.org/wiki/Drivin%27_on_9" class="nounderline">Drivin' on 9</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Benjamin_Tucker" class="nounderline">Instead of a Book</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chelsea_Arts_District" class="nounderline">Chelsea NY art galleries</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Random_restart" class="nounderline">Random Restarts</a><br><br>
+<a href="../pictures2/restart.jpg" class="nounderline">Random restarts</a><br><br>
 <a href="https://en.wikipedia.org/wiki/William_Gibson" class="nounderline">William Gibson</a><br><br>
 <a href="https://en.wikipedia.org/wiki/V_for_Vendetta" class="nounderline">V for Vendetta</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Once_Upon_a_Time_in_Hollywood" class="nounderline">Once Upon a Time in Hollywood</a><br><br>
