--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 "is literally inside of a building right now",
 "wears band shirts",
 "inhabits a reality",
-"was once in an elevator with a celebrity",
+"once rode an elevator with a celebrity",
 "try me",
 "usually opens with f3",
 "has that dream where you're late for the test",
