--- a/ai/articles.html
+++ b/ai/articles.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Articles | Kevin Knight</title>
+  <title>Knight | AI | Articles</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
