--- a/ciphers/index.html
+++ b/ciphers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Kevin Knight</title>
+  <title>Kevin Knight | Ciphers</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -11,23 +11,23 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html">Home</a></li>
+      <li><a href="../index.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
 	<!--    <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>   -->
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Contact</h1>
+    <div class="hero">
+      <img src="movie-home-image.jpg" alt="Kevin Knight" class="headshot">
+      <h1>Kevin Knight</h1>
+    </div>
   </header>
 
   <!-- Main content -->
   <main>
-    <center>
-      <p>email: </p>
-      <br>
-    <p>kevin.crawford.knight@gmail.com</p> 
-    </center>
+    <p class="intro">Welcome to browse my cryptic. I live in Los Angeles.</p>
   </main>
 
   <!-- Footer -->
@@ -36,3 +36,4 @@
   </footer>
 </body>
 </html>
+
