--- a/ai/contact.html
+++ b/ai/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Kevin Knight</title>
+  <title>Knight | AI | Contact</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
