--- a/ai/talks.html
+++ b/ai/talks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Recent Talks | Kevin Knight</title>
+  <title>Knight | AI | Talks</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
