--- a/art/paintings.html
+++ b/art/paintings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Paintings | Kevin Knight</title>
+  <title>Knight | Art | Paintings</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
