--- a/ciphers/movies.html
+++ b/ciphers/movies.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ciphers | Kevin Knight</title>
+  <title>Knight | Ciphers | Movies</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
