--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	<br>
 
   <main class="button-grid">
-    <!-- order: ai, art, math, comics, writing, movies, classic -->
+    <!-- order: ai, art, math, writing, ciphers, classic -->
     <a href="likes/index.html"      aria-label="Pic">      <img src="headshot-kk.jpg"      alt="Pic"></a>
     <a href="ai/index.html"      aria-label="AI">      <img src="button-ai.png"      alt="AI"></a>
     <a href="art/index.html"     aria-label="Art">     <img src="button-art.png"     alt="ART"></a>
     <a href="math/index.html"    aria-label="Math">    <img src="button-math.png"    alt="MATH"></a>
     <!--    <a href="comics/index.html"  aria-label="Comics">  <img src="button-comics.png"  alt="TOFU BUFFET"></a>   -->
     <a href="writing/index.html" aria-label="Writing"> <img src="button-writing.png" alt="WRITING"></a>
-    <a href="movies/index.html"  aria-label="Ciphers">  <img src="button-ciphers.png"  alt="CIPHERS"></a>
+    <a href="ciphers/index.html"  aria-label="Ciphers">  <img src="button-ciphers.png"  alt="CIPHERS"></a>
     <a href="index-old.html"         aria-label="Classic"> <img src="button-classic.png" alt="CLASSIC HOME PAGE"></a>
   </main>
 
@@ -116,7 +116,6 @@
 "tap water's fine",
 "is why we can't have nice things",
 "vote for me",
-"be kind, rewind",
 "can't help but notice",
 "already tried turning it off and back on",
 "brought snacks",
