--- a/math/articles.html
+++ b/math/articles.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Articles | Kevin Knight</title>
+  <title>Knight | Math | Articles</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
