--- a/writing/books.html
+++ b/writing/books.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Books | Kevin Knight</title>
+  <title>Knight | Writing | Books</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
