--- a/writing/index.html
+++ b/writing/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kevin Knight | Writer</title>
+  <title>Kevin Knight | Writing</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
