--- a/writing/stories.html
+++ b/writing/stories.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Stories | Kevin Knight</title>
+  <title>Knight | Writing | Stories</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
