--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 "missed a belt loop",
 "impresses your mother",
 "gray at seventeen",
+"no people call me the space cowboy",
 "no sugar, please",
 "back to the lecture at hand",
 "once put two spaces after a period",
 "might or might not",
 "is unsupervised",
-"never anticipates the jump scare",
+"didn't see the jump scare coming",
 "are we still on the payroll?",
 "anybody seen the cat?",
 "is on the verge",
@@ -135,4 +136,5 @@
 
 </body>
 </html>
+
 
