--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 "listens to reason",
 "immediately crumples the receipt",
 "who's a good boy",
+"missed a spot",
 "surf's up",
 "is easily amused"];
 
