--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
 "immediately crumples the receipt",
 "who's a good boy",
 "missed a spot",
+"is grilling some burgers",
+"so i'm free to go?",
+"you gonna eat that?",
+"is acting now, while supplies last",
 "surf's up",
 "is easily amused"];
 
