--- a/art/paintings.html
+++ b/art/paintings.html
@@ -266,6 +266,14 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Aztecs</strong><br>oil on canvas, 30x40, 2017</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="Keep Calm"
+        data-medium="oil on wood" data-size="14x11" data-year="2021"
+        data-full="keep-calm-14x11.jpg">
+  <img src="keep-calm-14x11.jpg" alt="Keep Calm">
+  <figcaption><strong>Keep Calm</strong><br>oil on wood, 14x11, 2021</figcaption>
+</figure>
+
+<!--
 <figure class="painting" data-category="available" data-title="Selfie 2"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="selfie2-30x30.jpg">
