--- a/math/articles.html
+++ b/math/articles.html
@@ -32,6 +32,12 @@
       <a href="https://oeis.org/A383041" class="article-card">
         OEIS Integer Sequence A383041 (2025)
       </a>
+
+      <a href="https://aclanthology.org/2021.blackboxnlp-1.30.pdf" class="article-card">
+        Learning Mathematical Properties of Integers (2021)
+      </a>
+
+
     </div>
   </main>
 
