--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 "once rode an elevator with a celebrity",
 "try me",
 "has that dream where you're late for the test",
+"get yours today",
 "sees patterns where there literally aren't any",
 "needs a haircut",
 "should apply himself",
@@ -120,13 +121,17 @@
 "already tried turning it off and back on",
 "brought snacks",
 "listens to reason",
-"immediately crumples the receipt",
+"crumples the receipt",
+"insane prices, somebody stop us",
+"made in california",
+"nth year",
+"is a moby frob",
 "who's a good boy",
 "missed a spot",
 "is grilling some burgers",
 "so i'm free to go?",
 "you gonna eat that?",
-"is acting now, while supplies last",
+"act now, while supplies last",
 "surf's up",
 "is easily amused"];
 
