--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 "crumples the receipt",
 "insane prices, somebody stop us",
 "made in california",
-"nth year",
+"nth year student",
+"has really done it this time",
 "is a moby frob",
 "who's a good boy",
 "missed a spot",
