--- a/index-old.html
+++ b/index-old.html
@@ -218,10 +218,13 @@ on syntax-structuring for translation, and
 <a href="extra/denmark.3g2">Denmark</a>.
 
 
-<P> Here's a story called 
+<P> 
+<!--
+Here's a story called 
 <A HREF="extra/westbank.txt">Little House 
 on the West Bank</A>.  No matter how readers interpret the text,
 my favorite part is still where the baby throws up on the mom.
+-->
 And here's a gruesome
 <A HREF="extra/bugs-web.pdf">fairy tale</A> for you.
  
