--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
 "already tried turning it off and back on",
 "brought snacks",
 "listens to reason",
-"crumples the receipt",
+"crumples all receipts",
+"is feeling feelings",
+"looks kinda familiar",
+"has a thesis",
+"sits in the back",
+"will have a number one with onions",
 "insane prices, somebody stop us",
 "made in california",
 "nth year student",
