--- a/writing/books.html
+++ b/writing/books.html
@@ -43,6 +43,14 @@
         </figure>
       </a>
 
+
+      <a href="https://a.co/d/1TlDwVs" class="thumb">
+        <figure>
+          <img src="../math-kook-cover.jpg" alt="Math Kook">
+          <figcaption>Chaos in the integers (2022)</figcaption>
+        </figure>
+      </a>
+
       <a href="https://www.amazon.com/dp/0070522634?ref_=cm_sw_r_cp_ud_dp_6A00DXM4P41460PXH0CQ" class="thumb">
         <figure>
           <img src="knight-book.jpg" alt="Artificial Intelligence">
