--- a/writing/books.html
+++ b/writing/books.html
@@ -46,7 +46,7 @@
 
       <a href="https://a.co/d/1TlDwVs" class="thumb">
         <figure>
-          <img src="../math-kook-cover.jpg" alt="Math Kook">
+          <img src="../math/math-kook-cover.jpg" alt="Math Kook">
           <figcaption>Chaos in the integers (2022)</figcaption>
         </figure>
       </a>
