--- a/ai/articles.html
+++ b/ai/articles.html
@@ -17,6 +17,9 @@
       </ul>
     </nav>
     <h1 class="page-title">Selected Articles</h1>
+    <div class="hero">
+      <img style="max-width: 300px" src="../pictures/cassette-hits.jpg" alt="Kevin Knight" class="headshot">
+    </div>
   </header>
 
   <main>
@@ -47,7 +50,8 @@
   <br>
   
   <center> 
- For full article list, please click CV at top
+For full article list, please see 
+<li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
   </center>
 
 <!--
