--- a/ai/articles.html
+++ b/ai/articles.html
@@ -18,7 +18,7 @@
     </nav>
     <h1 class="page-title">Selected Articles</h1>
     <div class="hero">
-      <img style="max-width: 300px" src="../pictures/cassette-hits.jpg" alt="Kevin Knight" class="headshot">
+      <img style="max-width: 300px" src="cassette-hits-bw.jpg" alt="Kevin Knight" class="headshot">
     </div>
   </header>
 
