--- a/ai/articles.html
+++ b/ai/articles.html
@@ -51,7 +51,7 @@
   
   <center> 
 For full article list, please see 
-<li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+<a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a>
   </center>
 
 <!--
