--- a/likes/index.html
+++ b/likes/index.html
@@ -234,6 +234,9 @@
 <a href="https://en.wikipedia.org/wiki/Ex_Machina_(film)" class="nounderline">Ex Machina</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Undone_(TV_series)" class="nounderline">Undone</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Spider_Kiss" class="nounderline">Spider Kiss</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Braess%27s_paradox" class="nounderline">Braess's paradox</a><br><br>
+
 <a href="https://en.wikipedia.org/wiki/2001:_A_Space_Odyssey_(film)" class="nounderline">2001: A Space Odyssey</a><br><br>
 <a href="https://www.goodreads.com/book/show/195791689-hum" class="nounderline">Hum</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Leonard_Cohen" class="nounderline">Anthem by Leonard Cohen</a><br><br>
