--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 "has a thesis",
 "sits in the back",
 "will have a number one with onions",
+"works hard",
+"never won anything before",
+"hasn't seen it but will check it out",
+"once entertained an entire notion",
+"is checking with forensics",
+"feels phantom vibrations",
 "insane prices, somebody stop us",
 "made in california",
 "nth year student",
