--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
 "no people call me the space cowboy",
 "no sugar, please",
 "back to the lecture at hand",
-"once put two spaces after a period",
+"put two spaces after a period",
+"sorry i missed your talk",
+"is okay mentally",
+"hopelessly devoted",
+"can't take credit for that",
+"descended from apes",
+"was really, definitely invited",
+"has fifty dollars on the rams",
 "might or might not",
 "is unsupervised",
 "didn't see the jump scare coming",
