--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 "inhabits a reality",
 "once rode an elevator with a celebrity",
 "try me",
-"has that dream where you're late for the test",
+"has that dream where he's late for the test",
 "get yours today",
 "sees patterns where there literally aren't any",
 "needs a haircut",
@@ -62,14 +62,14 @@
 "no people call me the space cowboy",
 "no sugar, please",
 "back to the lecture at hand",
-"put two spaces after a period",
+"two spaces after a period",
 "sorry i missed your talk",
 "is okay mentally",
 "hopelessly devoted",
 "can't take credit for that",
 "descended from apes",
 "was really, definitely invited",
-"has fifty dollars on the rams",
+"has a hundred on the rams",
 "might or might not",
 "is unsupervised",
 "didn't see the jump scare coming",
@@ -95,7 +95,6 @@
 "serves the people",
 "what, me worry",
 "what day is it again",
-"does math in pen",
 "rat compatible",
 "thinks you're cool",
 "has a favorite jacket",
@@ -128,7 +127,7 @@
 "already tried turning it off and back on",
 "brought snacks",
 "listens to reason",
-"crumples all receipts",
+"will immediately crumple that receipt",
 "is feeling feelings",
 "looks kinda familiar",
 "has a thesis",
@@ -139,10 +138,10 @@
 "hasn't seen it but will check it out",
 "once entertained an entire notion",
 "is checking with forensics",
-"feels phantom vibrations",
+"feels phantom phone vibrations",
 "insane prices, somebody stop us",
 "made in california",
-"nth year student",
+"nth year",
 "has really done it this time",
 "is a moby frob",
 "who's a good boy",
