--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 "hopelessly devoted",
 "can't take credit for that",
 "descended from apes",
-"was really, definitely invited",
-"has a hundred on the rams",
+"was definitely invited, definitely",
+"has fifty bucks on the rams",
 "might or might not",
 "is unsupervised",
 "didn't see the jump scare coming",
@@ -132,7 +132,7 @@
 "looks kinda familiar",
 "has a thesis",
 "sits in the back",
-"will have a number one with onions",
+"gets the number one with onions",
 "works hard",
 "never won anything before",
 "hasn't seen it but will check it out",
