--- a/likes/index.html
+++ b/likes/index.html
@@ -191,7 +191,11 @@
 <a href="https://en.wikipedia.org/wiki/George_Carlin" class="nounderline">George Carlin</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Sexy_Sadie" class="nounderline">Sexy Sadie</a><br><br>
 <a href="https://en.wikipedia.org/wiki/John_von_Neumann" class="nounderline">John von Neumann</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Pimsleur_Language_Programs" class="nounderline">Pimsleur Language Lessons</a><br><br>
+
+<a href="https://www.pimsleur.com" class="nounderline">Pimsleur Language Lessons</a><br><br>
+
+
+
 <a href="https://en.wikipedia.org/wiki/Santeria_(song)" class="nounderline">Santeria by Sublime</a><br><br>
 <a href="https://en.wikipedia.org/wiki/To_Live_and_Die_in_L.A._(film)" class="nounderline">To Live and Die in L.A.</a><br><br>
 <a href="https://www.millcrosscoffee.com/blogs/news/millcross-team-community" class="nounderline">Meetings at Millcross Coffee</a><br><br>
