--- a/likes/index.html
+++ b/likes/index.html
@@ -222,7 +222,7 @@
 <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" class="nounderline">Conway's Game of Life</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Good_Is_Good" class="nounderline">Good is Good by Sheryl Crow</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Mulholland_Drive_(film)" class="nounderline">Mulholland Drive</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Raspberry_Pi" class="nounderline">Raspberry Pi</a><br><br>
+<a href="https://www.raspberrypi.com" class="nounderline">Raspberry Pi</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Hutong" class="nounderline">Beijing Hutong</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Automata_theory" class="nounderline">Automata theory</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Bob_Dylan" class="nounderline">Bob Dylan</a><br><br>
