--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 "tap water's fine",
 "is why we can't have nice things",
 "vote for me",
-"can't help but notice",
+"couldn't help but notice",
 "already tried turning it off and back on",
 "brought snacks",
 "listens to reason",
