--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
 "is why we can't have nice things",
 "vote for me",
 "couldn't help but notice",
+"ineligible for beatification",
+"not that kind of medical professional",
+"will take questions now",
+"knows a guy who knows a guy",
+"mint?",
+"have a good weekend, see you tomorrow",
+"has a nemesis",
+"stuck in the middle with you",
+"people think i'm joking",
+"upside down face emoji",
 "already tried turning it off and back on",
 "brought snacks",
 "listens to reason",
