--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 "wants to see you",
 "missed a belt loop",
 "impresses your mother",
-"gray at seventeen",
 "no people call me the space cowboy",
-"no sugar, please",
+"no sugar",
 "back to the lecture at hand",
 "two spaces after a period",
 "sorry i missed your talk",
