--- a/ciphers/index.html
+++ b/ciphers/index.html
@@ -27,7 +27,7 @@
 
   <!-- Main content -->
   <main>
-    <p class="intro">Welcome to browse my cryptic. I live in Los Angeles, so, you know.</p>
+    <p class="intro">Welcome to browse my cryptic. I live in Los Angeles.</p>
   </main>
 
   <!-- Footer -->
