--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
 "brought snacks",
 "listens to reason",
 "is feeling feelings",
+"capricorn",
+"maybe get one and split it?",
+"come on, double sixes",
+"the twain shall meet",
+"live and let live",
+"how much are we talking about?",
+"why not?",
+"2 tbsp curry, 1 tsp cumin, 1 tsp turmeric",
 "looks kinda familiar",
 "has a thesis",
 "sits in the back",
