--- a/art/paintings.html
+++ b/art/paintings.html
@@ -34,13 +34,13 @@
 data-category="featured" 
 data-title="Cat Searching" 
 data-medium="oil on canvas" 
-data-size="30x30in" 
+data-size="30x30 inches" 
 data-year="2020" 
 data-full="cat-searching-30x30.jpg">
 <img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
 <figcaption>
 <strong>Cat Searching</strong><br>
-oil on canvas, 30x30in, 2020
+oil on canvas, 30x30 inches, 2020
 </figcaption>
 </figure>
 
