--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 "looks kinda familiar",
 "has a thesis",
 "sits in the back",
-"gets the number one with onions",
+"will have the #1 with onions",
 "works hard",
 "never won anything before",
 "hasn't seen it but will check it out",
