--- a/art/order.html
+++ b/art/order.html
@@ -2,21 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order | Threeven Labs</title>
-  <link rel="stylesheet" href="/styles.css"> <!-- Link to your shared CSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Knight | Art | Paintings</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+  <!-- Header with Navigation -->
   <header>
-    <nav>
+    <nav class="navbar">
       <ul>
-        <li><a href="/">Paintings</a></li>
-        <li><a href="/book">Book</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/order" class="active">Order</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="paintings.html">Paintings</a></li>
+        <li><a href="book.html">Book</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <h1 class="page-title">Paintings</h1>
   </header>
 
   <main class="content">
@@ -71,11 +73,12 @@
     </ol>
 
     <p><strong>Questions?</strong><br>
-    Reach out to us at <a href="mailto:you@example.com">you@example.com</a> or via the <a href="/contact">Contact Form</a>.</p>
+    Reach out to us at <a href="mailto:in.theory.originals@gmail.com">in.theory.originals@gmail.com</a> or via our <a href="/contact">Contact Form</a>.</p>
   </main>
 
+  <!-- Footer -->
   <footer>
-    <p>&copy; Threeven Labs</p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
