--- a/art/order.html
+++ b/art/order.html
@@ -23,7 +23,9 @@
 
   <main class="content">
     <h1>Pricing & Shipping</h1>
-    <p>All paintings are original oil on canvas. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
+    <p>All paintings are original oil on canvas or wood. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
+
+    <br>
 
     <h2>🎨 Painting Prices</h2>
     <table>
@@ -48,12 +50,16 @@
       </tbody>
     </table>
 
+    <br>
+
     <h2>🚚 Shipping</h2>
     <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, a recent shipment of <strong>5 paintings (3 boxes)</strong> from <strong>Los Angeles to Seattle</strong> cost <strong>$397</strong>.</p>
     <ul>
       <li>You’ll receive a <strong>custom shipping quote</strong> after your inquiry</li>
       <li><strong>Local pickup</strong> in Los Angeles is free</li>
     </ul>
+
+    <br>
 
     <h2>💳 Payment Options</h2>
     <p>After confirming your quote, we’ll send you a secure payment link. Accepted payment methods:</p>
@@ -63,6 +69,8 @@
       <li>Venmo (@ThreevenLabs)</li>
       <li>Bank transfer (on request)</li>
     </ul>
+
+    <br>
 
     <h2>🛒 How to Order</h2>
     <ol>
