--- a/art/order.html
+++ b/art/order.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Knight | Art | Paintings</title>
+  <title>Knight | Art | Pricing</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -18,11 +18,10 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Paintings</h1>
+    <h1 class="page-title">Pricing and Shipping</h1>
   </header>
 
   <main class="content">
-    <h1>Pricing & Shipping</h1>
     <p>All paintings are original oil on canvas or wood. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
 
     <br>
