--- a/art/order.html
+++ b/art/order.html
@@ -26,7 +26,6 @@
 
     <br>
 
-    <h2>🎨 Painting Prices</h2>
     <table>
       <thead>
         <tr><th>Canvas Size (inches)</th><th>Price</th></tr>
@@ -52,7 +51,7 @@
     <br>
 
     <h2>🚚 Shipping</h2>
-    <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, a recent shipment of <strong>5 paintings (3 boxes)</strong> from <strong>Los Angeles to Seattle</strong> cost <strong>$397</strong>.</p>
+    <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, <strong>5 paintings (3 boxes)</strong> to <strong>Seattle</strong> is roughly <strong>$400</strong>.</p>
     <ul>
       <li>You’ll receive a <strong>custom shipping quote</strong> after your inquiry</li>
       <li><strong>Local pickup</strong> in Los Angeles is free</li>
@@ -80,7 +79,7 @@
     </ol>
 
     <p><strong>Questions?</strong><br>
-    Reach out to us at <a href="mailto:in.theory.originals@gmail.com">in.theory.originals@gmail.com</a> or via our <a href="/contact">Contact Form</a>.</p>
+    Reach out to us at in.theory.originals@gmail.com.</p>
   </main>
 
   <!-- Footer -->
