--- a/math/articles.html
+++ b/math/articles.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="book.html">Book</a></li>
+        <li><a href="https://forum.collatzworld.com">Forum</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
