--- a/math/contact.html
+++ b/math/contact.html
@@ -15,7 +15,7 @@
         <li><a href="videos.html">Videos</a></li>
         <li><a href="book.html">Book</a></li>
         <li><a href="articles.html">Articles</a></li>
-        <li><a href="forum.collatzworld.com">Forum</a></li>
+        <li><a href="https://forum.collatzworld.com">Forum</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
