--- a/math/index.html
+++ b/math/index.html
@@ -15,7 +15,7 @@
         <li><a href="videos.html">Videos</a></li>
         <li><a href="book.html">Book</a></li>
         <li><a href="articles.html">Articles</a></li>
-        <li><a href="forum.collatzworld.com">Forum</a></li>
+        <li><a href="https://forum.collatzworld.com">Forum</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
