--- a/art/order.html
+++ b/art/order.html
@@ -22,7 +22,7 @@
   </header>
 
   <main class="content">
-    <p>All paintings are original oil on canvas or wood. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
+    <p>All paintings are original oils, no copies. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
 
     <br>
 
@@ -31,18 +31,26 @@
         <tr><th>Canvas Size (inches)</th><th>Price</th></tr>
       </thead>
       <tbody>
-        <tr><td>30 × 30</td><td>$700</td></tr>
-        <tr><td>36 × 36</td><td>$700</td></tr>
-        <tr><td>40 × 30</td><td>$700</td></tr>
-        <tr><td>36 × 18</td><td>$700</td></tr>
-        <tr><td>24 × 36</td><td>$700</td></tr>
-        <tr><td>48 × 24</td><td>$800</td></tr>
-        <tr><td>36 × 24</td><td>$800</td></tr>
-        <tr><td>30 × 40</td><td>$800</td></tr>
-        <tr><td>48 × 30</td><td>$2,000</td></tr>
-        <tr><td>40 × 60</td><td>$3,000</td></tr>
-        <tr><td>60 × 40</td><td>$3,000</td></tr>
-        <tr><td>60 × 60</td><td>$5,000</td></tr>
+        <!--
+	<tr><td>30×30</td><td>$700</td></tr>
+        <tr><td>36×36</td><td>$700</td></tr>
+        <tr><td>40×30</td><td>$700</td></tr>
+        <tr><td>36×18</td><td>$700</td></tr>
+        <tr><td>24×36</td><td>$700</td></tr>
+        <tr><td>48×24</td><td>$800</td></tr>
+        <tr><td>36×24</td><td>$800</td></tr>
+        <tr><td>30×40</td><td>$800</td></tr>
+        <tr><td>48×30</td><td>$2,000</td></tr>
+        <tr><td>40×60</td><td>$3,000</td></tr>
+        <tr><td>60×40</td><td>$3,000</td></tr>
+        <tr><td>60×60</td><td>$5,000</td></tr>
+        <tr><td>Other sizes</td><td>$500</td></tr>
+	-->
+        <tr><td>30×30, 36x36, 40x30, 36x18, 24x36</td><td>$700</td></tr>
+        <tr><td>48×24, 36x24, 30x40</td><td>$800</td></tr>
+        <tr><td>48×30</td><td>$2,000</td></tr>
+        <tr><td>40×60, 60x40</td><td>$3,000</td></tr>
+        <tr><td>60×60</td><td>$5,000</td></tr>
         <tr><td>Other sizes</td><td>$500</td></tr>
       </tbody>
     </table>
