--- a/art/order.html
+++ b/art/order.html
@@ -28,7 +28,10 @@
 
     <table>
       <thead>
-        <tr><th>Canvas Size (inches)</th><th>Price</th></tr>
+      <!-- <tr><th>Canvas Size (inches)</th><th>Price</th></tr> -->
+      <th style="text-align: left;">Canvas Size (inches)</th>
+      <th style="text-align: left;">Price</th>
+
       </thead>
       <tbody>
         <!--
@@ -46,7 +49,7 @@
         <tr><td>60×60</td><td>$5,000</td></tr>
         <tr><td>Other sizes</td><td>$500</td></tr>
 	-->
-        <tr><td>30×30, 36x36, 40x30, 36x18, 24x36</td><td>$700</td></tr>
+        <tr><td style="padding-right: 2em;">30×30, 36x36, 40x30, 36x18, 24x36</td><td>$700</td></tr>
         <tr><td>48×24, 36x24, 30x40</td><td>$800</td></tr>
         <tr><td>48×30</td><td>$2,000</td></tr>
         <tr><td>40×60, 60x40</td><td>$3,000</td></tr>
