--- a/art/order.html
+++ b/art/order.html
@@ -22,7 +22,7 @@
   </header>
 
   <main class="content">
-    <p>All paintings are original oils, no copies. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
+    <p>All paintings are original oils. They are sold <strong>unframed</strong>, but the canvas edges are painted and gallery-wrapped for clean, ready-to-hang display.</p>
 
     <br>
 
