--- a/art/order.html
+++ b/art/order.html
@@ -28,7 +28,7 @@
 
     <table>
       <thead>
-      <!-- <tr><th>Canvas Size (inches)</th><th>Price</th></tr> -->
+      <!-- <tr><th>Canvas Size (inches)</th><th>Price (USD)</th></tr> -->
       <th style="text-align: left;">Canvas Size (inches)</th>
       <th style="text-align: left;">Price</th>
 
