--- a/art/order.html
+++ b/art/order.html
@@ -34,34 +34,20 @@
 
       </thead>
       <tbody>
-        <!--
-	<tr><td>30×30</td><td>$700</td></tr>
-        <tr><td>36×36</td><td>$700</td></tr>
-        <tr><td>40×30</td><td>$700</td></tr>
-        <tr><td>36×18</td><td>$700</td></tr>
-        <tr><td>24×36</td><td>$700</td></tr>
-        <tr><td>48×24</td><td>$800</td></tr>
-        <tr><td>36×24</td><td>$800</td></tr>
-        <tr><td>30×40</td><td>$800</td></tr>
-        <tr><td>48×30</td><td>$2,000</td></tr>
-        <tr><td>40×60</td><td>$3,000</td></tr>
-        <tr><td>60×40</td><td>$3,000</td></tr>
-        <tr><td>60×60</td><td>$5,000</td></tr>
-        <tr><td>Other sizes</td><td>$500</td></tr>
-	-->
         <tr><td style="padding-right: 2em;">30×30, 36x36, 40x30, 36x18, 24x36</td><td>$700</td></tr>
         <tr><td>48×24, 36x24, 30x40</td><td>$800</td></tr>
         <tr><td>48×30</td><td>$2,000</td></tr>
         <tr><td>40×60, 60x40</td><td>$3,000</td></tr>
         <tr><td>60×60</td><td>$5,000</td></tr>
         <tr><td>Other sizes</td><td>$500</td></tr>
+	<tr><td>Commissioned works</td><td>avail.</td></tr>
       </tbody>
     </table>
 
     <br>
 
     <h2>🚚 Shipping</h2>
-    <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, <strong>5 paintings (3 boxes)</strong> to <strong>Seattle</strong> is roughly <strong>$400</strong>.</p>
+    <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, <strong>5 paintings (3 boxes)</strong> to <strong>Washington State</strong> is roughly <strong>$400</strong>.</p>
     <ul>
       <li>You’ll receive a <strong>custom shipping quote</strong> after your inquiry</li>
       <li><strong>Local pickup</strong> in Los Angeles is free</li>
@@ -74,8 +60,8 @@
     <ul>
       <li>Credit / debit cards (via Stripe)</li>
       <li>PayPal</li>
-      <li>Venmo (@ThreevenLabs)</li>
-      <li>Bank transfer (on request)</li>
+      <li>Venmo</li>
+      <li>Other (please contact)</li>
     </ul>
 
     <br>
