--- a/art/order.html
+++ b/art/order.html
@@ -40,7 +40,7 @@
         <tr><td>40×60, 60x40</td><td>$3,000</td></tr>
         <tr><td>60×60</td><td>$5,000</td></tr>
         <tr><td>Other sizes</td><td>$500</td></tr>
-	<tr><td>Commissioned works</td><td>avail.</td></tr>
+	<tr><td>Commissioned works</td><td>tbd</td></tr>
       </tbody>
     </table>
 
