--- a/art/paintings.html
+++ b/art/paintings.html
@@ -23,12 +23,10 @@
   <!-- Main content -->
   <main>
 
-
     <!-- =========  FEATURED  ========= -->
     <section id="featured">
       <h2>Featured</h2>
       <div class="gallery">
-
 
 <figure class="painting" 
 data-category="featured" 
@@ -933,13 +931,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Southern California</strong><br>oil on canvas, 30x30, 2021</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Morning Train"
-        data-medium="oil on canvas" data-size="36x36" data-year="2014"
-        data-full="train-36x36.jpg">
-  <img src="train-36x36.jpg" alt="Morning Train Thumbnail">
-  <figcaption><strong>Morning Train</strong><br>oil on canvas, 36x36, 2014</figcaption>
-</figure>
-
 <figure class="painting" data-category="sold" data-title="Cat Searching"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
         data-full="cat-searching-30x30.jpg">
@@ -966,13 +957,6 @@ oil on canvas, 60x60, 2020
         data-full="los-angeles-42x24.jpg">
   <img src="los-angeles-42x24.jpg" alt="Los Angeles Thumbnail">
   <figcaption><strong>Los Angeles</strong><br>oil on wood, 42x24, 2023</figcaption>
-</figure>
-
-<figure class="painting" data-category="sold" data-title="Quaking Aspen"
-        data-medium="oil on canvas" data-size="28x22" data-year="2023"
-        data-full="quaking-aspen-28x22.jpg">
-  <img src="quaking-aspen-28x22.jpg" alt="Quaking Aspen Thumbnail">
-  <figcaption><strong>Quaking Aspen</strong><br>oil on canvas, 28x22, 2023</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Snow"
@@ -1073,13 +1057,6 @@ oil on canvas, 60x60, 2020
         data-full="maga-30x40.jpg">
   <img src="maga-30x40.jpg" alt="Make America Great Again Thumbnail">
   <figcaption><strong>Make America Great Again</strong><br>oil on canvas, 30x40, 2018</figcaption>
-</figure>
-
-<figure class="painting" data-category="sold" data-title="Mao"
-        data-medium="oil on canvas" data-size="20x40" data-year="2022"
-        data-full="mao-20x40.jpg">
-  <img src="mao-20x40.jpg" alt="Mao Thumbnail">
-  <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Yùeguāng"
@@ -1207,7 +1184,30 @@ oil on canvas, 60x60, 2020
   <img src="work-like-a-dog-36x36.jpg" alt="Work Like a Dog Thumbnail">
   <figcaption><strong>Work Like a Dog</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
+
+<figure class="painting" data-category="sold" data-title="Faded in the Optim"
+        data-medium="oil on canvas" data-size="40x30" data-year="2021"
+        data-full="xavi-40x30.jpg">
+  <img src="xavi-40x30.jpg" alt="Faded in the Optim Thumbnail">
+  <figcaption><strong>Faded in the Optim</strong><br>oil on canvas, 40x30, 2021</figcaption>
+</figure>
 -->
+
+      </div>
+    </section>
+
+
+    <!-- =========  COMMISSIONED  ========= -->
+    <section id="commissioned">
+      <h2>Commissioned</h2>
+      <div class="gallery">
+
+<figure class="painting" data-category="sold" data-title="Morning Train"
+        data-medium="oil on canvas" data-size="36x36" data-year="2014"
+        data-full="train-36x36.jpg">
+  <img src="train-36x36.jpg" alt="Morning Train Thumbnail">
+  <figcaption><strong>Morning Train</strong><br>oil on canvas, 36x36, 2014</figcaption>
+</figure>
 
 <figure class="painting" data-category="sold" data-title="Faded in the Optim"
         data-medium="oil on canvas" data-size="40x30" data-year="2021"
@@ -1216,20 +1216,22 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Faded in the Optim</strong><br>oil on canvas, 40x30, 2021</figcaption>
 </figure>
 
+<figure class="painting" data-category="sold" data-title="Quaking Aspen"
+        data-medium="oil on canvas" data-size="28x22" data-year="2023"
+        data-full="quaking-aspen-28x22.jpg">
+  <img src="quaking-aspen-28x22.jpg" alt="Quaking Aspen Thumbnail">
+  <figcaption><strong>Quaking Aspen</strong><br>oil on canvas, 28x22, 2023</figcaption>
+</figure>
 
-        
+<figure class="painting" data-category="sold" data-title="Mao"
+        data-medium="oil on canvas" data-size="20x40" data-year="2022"
+        data-full="mao-20x40.jpg">
+  <img src="mao-20x40.jpg" alt="Mao Thumbnail">
+  <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
+</figure>
 
       </div>
     </section>
-
-
-
-
-
-
-
-
-
     
   </main>
 
