--- a/art/order.html
+++ b/art/order.html
@@ -47,7 +47,7 @@
     <br>
 
     <h2>🚚 Shipping</h2>
-    <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, <strong>5 paintings (3 boxes)</strong> to <strong>Washington State</strong> is roughly <strong>$400</strong>.</p>
+    <p>Shipping is quoted individually based on the destination, size, and number of paintings. For reference, <strong>5 paintings (3 boxes)</strong> to <strong>West Coast USA</strong> is roughly <strong>$400</strong>.</p>
     <ul>
       <li>You’ll receive a <strong>custom shipping quote</strong> after your inquiry</li>
       <li><strong>Local pickup</strong> in Los Angeles is free</li>
