--- a/art/paintings.html
+++ b/art/paintings.html
@@ -1199,7 +1199,7 @@ oil on canvas, 60x60, 2020
 
     <!-- =========  COMMISSIONED  ========= -->
     <section id="commissioned">
-      <h2>Commissioned</h2>
+      <h2>Commissioned [Sold]</h2>
       <div class="gallery">
 
 <figure class="painting" data-category="sold" data-title="Morning Train"
@@ -1228,6 +1228,13 @@ oil on canvas, 60x60, 2020
         data-full="mao-20x40.jpg">
   <img src="mao-20x40.jpg" alt="Mao Thumbnail">
   <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Don Lito"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="don-lito-30x30.jpg">
+  <img src="don-lito-30x30.jpg" alt="Don Lito Thumbnail">
+  <figcaption><strong>Don Lito</strong><br>oil on canvas, 30x30, 2025</figcaption>
 </figure>
 
       </div>
