--- a/art/contact.html
+++ b/art/contact.html
@@ -30,6 +30,10 @@
     <p>purchase inquiries:</p>
       <br>
     <p>in.theory.originals@gmail.com</p>
+      <br><br>
+    <p>for commissioned works, contact:</p>
+      <br>
+    <p>in.theory.originals@gmail.com</p>
     </center>
   </main>
 
