--- a/art/contact.html
+++ b/art/contact.html
@@ -31,7 +31,7 @@
       <br>
     <p>in.theory.originals@gmail.com</p>
       <br><br>
-    <p>for commissioned works, contact:</p>
+    <p>interested in a commissioned piece?</p>
       <br>
     <p>in.theory.originals@gmail.com</p>
     </center>
