--- a/art/order.html
+++ b/art/order.html
@@ -30,7 +30,7 @@
       <thead>
       <!-- <tr><th>Canvas Size (inches)</th><th>Price (USD)</th></tr> -->
       <th style="text-align: left;">Canvas Size (inches)</th>
-      <th style="text-align: left;">Price</th>
+      <th style="text-align: left;">Price (USD)</th>
 
       </thead>
       <tbody>
