--- a/art/book.html
+++ b/art/book.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+        <li><a href="order.html">Order</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
