--- a/art/paintings.html
+++ b/art/paintings.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="book.html">Book</a></li>
-        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+	<!--        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li> -->
         <li><a href="order.html">Order</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
