--- a/art/order.html
+++ b/art/order.html
@@ -79,6 +79,12 @@
     Reach out to us at in.theory.originals@gmail.com.</p>
   </main>
 
+  <br>
+    <div class="hero">
+      <img src="on-the-wall.jpg" alt="Wall Sample" class="headshot">
+    </div>
+  <br>
+
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
