--- a/art/contact.html
+++ b/art/contact.html
@@ -15,7 +15,7 @@
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="book.html">Book</a></li>
 	<!--       <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li> -->
-        <li><a href="order.html">Order</a></li>
+        <li><a href="order.html">Pricing</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
