--- a/art/paintings.html
+++ b/art/paintings.html
@@ -1202,7 +1202,7 @@ oil on canvas, 60x60, 2020
     <!-- =========  COMMISSIONED  ========= -->
 
     <section id="commissioned">
-      <h2>Commissioned Works</h2>
+      <h2>Sample Commissioned Works</h2>
       <div class="gallery">
 
    <figure class="painting" data-category="sold" data-title="Morning Train"
