--- a/ciphers/articles.html
+++ b/ciphers/articles.html
@@ -39,6 +39,7 @@
   <a href="https://aclweb.org/anthology/D/D14/D14-1185.pdf" class="article-card">Cipher Type Detection (2014)</a>
   <a href="http://dl.acm.org/citation.cfm?id=2857052" class="article-card">From Nyushu Script to Translation (2016)</a>
   <a href="https://arxiv.org/abs/1810.04297"                               class="article-card">Decipherment of Historical Manuscript Images (2019)</a>
+  <a href="https://aclanthology.org/2020.emnlp-main.471/"                               class="article-card">Solving Historical Dictionary Codes with a Neural Language Model (2020)</a>
 
   
 
@@ -56,10 +57,9 @@
   <center>2020</center>
   <p>
   <a href="https://arxiv.org/pdf/2010.08185.pdf"                               class="article-card">DiDi's Machine Translation System for WMT2020</a>
-  <a href="https://arxiv.org/pdf/2010.04746.pdf"                               class="article-card">Solving Historical Dictionary Codes with a Neural Language Model</a>
-  <a href="https://arxiv.org/pdf/2010.04744.pdf"                               class="article-card">Learning to Pronounce Chinese Without a Pronunciation Dictionary</a>
   <a href="https://www.aclweb.org/anthology/2020.iwslt-1.1v2.pdf"              class="article-card">Findings of the IWSLT 2020 Evaluation Campaign</a>
   <a href="https://www.aclweb.org/anthology/2020.acl-main.756.pdf"             class="article-card">Parallel Corpus Filtering via Pre‑trained Language Models</a>
+  <a href="https://arxiv.org/pdf/2010.04744.pdf"                               class="article-card">Learning to Pronounce Chinese Without a Pronunciation Dictionary</a>
 
   <center>2019</center>
   <p>
