--- a/art/index.html
+++ b/art/index.html
@@ -13,8 +13,8 @@
       <ul>
       <li><a href="../index.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="paintings.html">Paintings</a></li>
-        <li><a href="order.html">Pricing</a></li>
         <li><a href="book.html">Book</a></li>
+        <li><a href="order.html">Buy</a></li>
 	<!--        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
