--- a/art/paintings.html
+++ b/art/paintings.html
@@ -12,8 +12,8 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="order.html">Pricing</a></li>
         <li><a href="book.html">Book</a></li>
+        <li><a href="order.html">Buy</a></li>
 	<!--        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
