--- a/likes/index.html
+++ b/likes/index.html
@@ -246,6 +246,8 @@
 <a href="https://en.wikipedia.org/wiki/Leonard_Cohen" class="nounderline">Anthem by Leonard Cohen</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Player_(1992_film)" class="nounderline">The Player</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Led_Zeppelin" class="nounderline">Led Zeppelin</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Game_theory" class="nounderline">Game Theory (math)</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Game_Theory_(band)" class="nounderline">Game Theory (80s 60s band)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Divine_Hammer_(song)" class="nounderline">Divine Hammer</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Last_Picture_Show" class="nounderline">The Last Picture Show</a><br><br>
 <a href="https://en.wikipedia.org/wiki/A_Scanner_Darkly" class="nounderline">A Scanner Darkly</a><br><br>
