--- a/ai/talks.html
+++ b/ai/talks.html
@@ -28,7 +28,7 @@
 	  <p>
     <div class="article-list">
       <a href="https://histocrypt.org/" class="article-card">HistoCrypt (2025), Pozna&nacute;, Poland</a>
-      <a href="" class="article-card">USC CS Masters Graduation (2025), Los Angeles, CA</>
+      <a href="https://youtu.be/Evc_pi8soHU?si=nbwloB5lyaSBHoGG" class="article-card">USC CS Masters Graduation (2025), Los Angeles, CA</>
       <a href="https://www-anlp-jp.translate.goog/nlp2024/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=sc#invited_lecture" class="article-card">30th Japanese NLP Conference (2024), Kobe, Japan</a>
       <a href="https://www.isi.edu/events/4667/30-years-of-perplexity/" class="article-card">USC/ISI NLP Seminar (2024), Marina del Rey, CA</a>
       <a href="https://wired.me/technology/heres-what-to-expect-from-saudis-global-ai-summit/" class="article-card">Global AI Summit (2022), Riyadh, Saudi Arabia</a>
