--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 "splits his time between indoors and outdoors",
 "is literally inside of a building right now",
 "wears band shirts",
-"inhabits a reality",
-"once rode an elevator with a celebrity",
+"rode an elevator with a celebrity",
 "try me",
 "has that dream where he's late for the test",
 "get yours today",
@@ -59,15 +58,13 @@
 "missed a belt loop",
 "impresses your mother",
 "no people call me the space cowboy",
-"no sugar",
 "back to the lecture at hand",
-"two spaces after a period",
 "sorry i missed your talk",
 "is okay mentally",
 "hopelessly devoted",
 "can't take credit for that",
 "descended from apes",
-"was definitely invited, definitely",
+"was definitely invited",
 "has fifty bucks on the rams",
 "might or might not",
 "is unsupervised",
@@ -93,8 +90,8 @@
 "needs a new backpack",
 "serves the people",
 "what, me worry",
-"what day is it again",
-"rat compatible",
+"what day is it again?",
+"rat compatible", 
 "thinks you're cool",
 "has a favorite jacket",
 "let's don't and say we did",
@@ -148,7 +145,7 @@
 "looks kinda familiar",
 "has a thesis",
 "sits in the back",
-"will have the #1 with onions",
+"gets the number one with onions",
 "works hard",
 "never won anything before",
 "hasn't seen it but will check it out",
