--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 "listens to reason",
 "is feeling feelings",
 "capricorn",
-"maybe get one and split it?",
+"maybe let's get one and split it?",
 "come on, double sixes",
 "the twain shall meet",
 "live and let live",
