--- a/art/paintings.html
+++ b/art/paintings.html
@@ -267,6 +267,13 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Aztecs</strong><br>oil on canvas, 30x40, 2017</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="Woman with Bike"
+        data-medium="oil on canvas" data-size="30x30" data-year="2014"
+        data-full="woman-with-bike-30x30.jpg">
+  <img src="woman-with-bike-30x30.jpg" alt="Woman with Bike Thumbnail">
+  <figcaption><strong>Woman with Bike</strong><br>oil on canvas, 30x30, 2014</figcaption>
+</figure>
+
 <figure class="painting" data-category="available" data-title="Keep Calm"
         data-medium="oil on wood" data-size="14x11" data-year="2021"
         data-full="keep-calm-14x11.jpg">
