--- a/ai/talks.html
+++ b/ai/talks.html
@@ -31,7 +31,8 @@
       <a href="https://youtu.be/Evc_pi8soHU?si=nbwloB5lyaSBHoGG" class="article-card">USC CS Masters Graduation (2025), Los Angeles, CA</>
       <a href="https://www-anlp-jp.translate.goog/nlp2024/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=sc#invited_lecture" class="article-card">30th Japanese NLP Conference (2024), Kobe, Japan</a>
       <a href="https://www.isi.edu/events/4667/30-years-of-perplexity/" class="article-card">USC/ISI NLP Seminar (2024), Marina del Rey, CA</a>
-      <a href="https://wired.me/technology/heres-what-to-expect-from-saudis-global-ai-summit/" class="article-card">Global AI Summit (2022), Riyadh, Saudi Arabia</a>
+      <a href="https://www.eon.events/speakers2023" class="article-card">EON Edge of Now (2023)</a>
+      <a href="https://www.prnewswire.com/in/news-releases/the-2022-global-ai-summit-begins-with-launch-of-several-new-international-initiatives-874983429.html" class="article-card">Global AI Summit (2022), Riyadh, Saudi Arabia</a>
       <a href="https://aclanthology.org/events/naacl-2018/" class="article-card">NAACL HLT (2018), New Orleans, LA</a>
     </div>
 
