--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 "is feeling feelings",
 "capricorn",
 "maybe let's get one and split it?",
+"here's a con-cept that works",
+"picked the wrong precinct",
 "come on, double sixes",
 "the twain shall meet",
 "live and let live",
