--- a/art/order.html
+++ b/art/order.html
@@ -58,9 +58,8 @@
     <h2>💳 Payment Options</h2>
     <p>After confirming your quote, we’ll send you a secure payment link. Accepted payment methods:</p>
     <ul>
-      <li>Credit / debit cards (via Stripe)</li>
-      <li>PayPal</li>
-      <li>Venmo</li>
+      <li>PayPal, Venmo, Zelle</li>
+      <li>Credit / debit cards</li>
       <li>Other (please contact)</li>
     </ul>
 
